--- a/dep_electron/src/index.html
+++ b/dep_electron/src/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>No Treble</title>
   </head>
-  
+
   <body>
     <div id="root"></div>
+    
   </body>
 </html>
