add style to titlebar

--- a/electron/src/index.html
+++ b/electron/src/index.html
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <div id="titleBarContainer">
+      <div id="titleBar" class="drag"></div>
+    </div>
     <div id="root"></div>
     <div id="dz-root"></div>
   </body>
